--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 :root {
   --text-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  --primary-bg-color: #ff6611; /* Orange background */
+  --primary-bg-color: #ff8b4d; /* Orange background */
   --secondary-bg-color: #ffffff; /* White background */
   --text-color: #282c34; /* Dark text color */
+}
+.inputPrompttTextarea::placeholder {
+  font-family: Arial, sans-serif;
 }
 
 .App {
@@ -236,12 +239,13 @@ nav svg {
   text-align: left;
   display: flex;
   justify-content: left;
-  background-color: #fa884a;
+  background-color: #ff8b4d;
   border-radius: 10px;
   /* align-items: center; */
   column-gap: 10px;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-top: 12px;
 }
 
 .botMessageWrapper {
@@ -335,6 +339,7 @@ nav svg {
   outline: none;
   border: 1px solid #000000; /* Black border */
   border-radius: 10px;
+  
 }
 form button { 
   position: absolute;
@@ -427,9 +432,11 @@ form button {
   }
   .chatBox {
     position: static;
+    margin-top: 10px;
   }
   .chatPromptWrapper {
     padding: 12px;
+    margin-top: 10px;
   }
   .botMessageWrapper {
     padding: 12px;
@@ -476,11 +483,13 @@ form button {
 }
 .inputPromptWrapper {
   background-color: #ffffff; /* White background */
+  margin-top: 10px;
+  
 }
 
 form button {
   background: #ffffff; /* White background */
-  border: 2px solid #ff6611; /* Orange border */
+ 
 }
 
 .navPrompt {
@@ -497,4 +506,11 @@ form button {
 
 .botMessageWrapper {
   background-color: #ffffff; /* White background */
+  /* box-shadow: 10px 5px 5px #ff6611; */
+  padding: 20px;
+  box-shadow:
+    inset 0 -3em 3em rgba(191, 143, 12, 0.3),
+    0 0 0 2px white,
+    0.3em 0.3em 1em rgba(181, 104, 9, 0.6);
+    border-radius: 10px;
 }
